# pyproject.toml
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "teste_python"
version = "0.1.0"
description = "Q1: Identifica os maiores devedores não renegociados. Q2:  "
authors = [{name = "ooleondev", email = "ooleondev@gmail.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "black>=24.8.0",
    "flake8>=5.0.4",
    "pytest>=8.3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "flake8",
    "black",
    "mypy"
]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
